<resources>
    <string name="app_name">ArkWallpaper</string>
    <string name="change_tab">CHANGE</string>
    <string name="albums_tab">ALBUMS</string>
    <string name="settings_tab">SETTINGS</string>
    <string name="add_album">add album</string>
    <string name="albumName">Album name</string>
    <string name="add_new_album">Add new album</string>
    <string name="no_name_provided">Please provide album\'s name</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="close">close</string>
    <string name="rename">Rename</string>
    <string name="album_delete_confirmation">Are you sure you want to delete this album?</string>
    <string name="image_delete_confirmation">Are you sure you want to delete this image?</string>
    <string name="permission_denied">Please grant permission to continue</string>
    <string name="gallery_add_photos_error">Your device does not support adding pictures.\nPlease contact your manufacturer.</string>
    <string name="gallery_add_folder_error">Your device does not support adding folders.\nPlease contact your manufacturer.</string>
    <string name="albumCount">(%d images)</string>
    <string name="album_single_image_info">imageTransition</string>
    <string name="blogName">Blog name</string>
    <string name="Syncung">Syncing.....</string>
    <string name="blogNotFound">No blog found please check the name and try again</string>
    <string name="choose_cat">Choose Category</string>
    <string name="tumblrAlreadyExist">Tumblr album exist</string>
    <string name="fivePxAlreadyExist">500Px album already exist</string>
    <string name="addTumblrAlbum">Add tumblr</string>
    <string name="addfivePxAlbum">Add 500Px</string>
    <string name="addAlbum">Add Album from gallery</string>
    <string name="app_description">View your photos as slideshow on your homescreen wallpaper at a defined interval</string>
    <string name="select">select album</string>
    <string name="setAsWallpaper">Set as wallpaper</string>
    <string name="downloadFile">Download</string>
    <string name="changeWallpaper">Change Wallpaper</string>
    <string name="imageSaved">Image Saved</string>
    <string name="ArkWallpaperIsNotActive">Set the app as your live wallpaper in order to use it. Click here to do so</string>
    <string name="lastWallpaper">last Chosen image</string>
    <string name="lastWallpaperExpanded">last Chosen image expanded</string>
    <string name="changeEvery">Change wallpaper every</string>
    <string name="defaultChangeValue">30</string>
    <string name="changeWithUnlock">Change wallpaper on unlock screen</string>
    <string name="changeWithDoubleTap">Change Wallpaper with double tap</string>
    <string name="changeValueIsEmpty">Please enter a valid value</string>
    <string name="emptyAlbum">Album is empty</string>
    <string name="expandedImageView">expandedImageView</string>
    <string name="displayModeFill">Fill</string>
    <string name="displayModeFit">Fit</string>
    <string name="displayModeNormal">Display: %1$s x %2$s px</string>
    <string name="displayModeLauncher">Launcher: %1$s x %2$s px</string>
    <string name="imagePositionSettings">Image Position</string>
    <string name="imagePositionDescribtion">How to handle images which don\'t fit to the home screen</string>
    <string name="imageScrollOption">Image Scrolling</string>
    <string name="scrollImageCheckBox">Scroll Images in home screen</string>
    <string name="randomImageOrder">Random Wallpaper Order</string>
    <string name="customizeImageTitle">Customize Image</string>
    <string name="customizeImageDesc">Change image blurring, dim and grey scale</string>
    <string name="Blur">Blur</string>
    <string name="Dim">Dim</string>
    <string name="Greyscale">Grey</string>
    <string name="customize">Customize Image</string>
    <string name="randomImage">Random Image</string>
    <string name="albumsFragment">Albums Fragment</string>
    <string name="changeFragment">Change Fragment</string>
    <string name="settingsFragment">Settings Fragment</string>
    <string name="customizeActivity">Customize Activity</string>
    <string name="settings">Settings</string>
    <string name="changeDisplayMode">Change Display Mode</string>
    <string name="fill">Fill</string>
    <string name="refreshWallpaper">Refresh Wallpaper</string>
    <string name="NextWallpaper">Next Wallpaper</string>
    <string name="nextAlbum">Next Album</string>
    <string name="switchToAlbum">Switch album:</string>
    <string name="albumCover">Album Cover Image</string>
    <string name="albumSingleImage">Album single image</string>
    <string name="lastWallpaperCustomize">Last chosen image customization</string>
    <string name="enterAlbumName">Enter album name</string>
    <string name="changeInterval">Enter change interval</string>
    <string name="openAddAlbumMenu">open add album menu</string>
    <string name="addImages">Add images</string>
    <string name="addFolder">Add image folder</string>
    <string name="imagesList">images list</string>
    <string name="refreshAlbum">refresh album</string>
    <string name="saveButton">save button</string>
    <string name="categoryDropDownn">category Drop Down</string>
    <string name="albumEnabled">album enabled checkbox</string>
    <string name="albumCountDesc">album count</string>
    <string name="chooseAlbum">choose this album</string>
    <string name="albumsList">albums list</string>
    <string name="changeBlurring">change blurring value</string>
    <string name="changeDimValue">change dim value</string>
    <string name="changeGreyValue">change grey scale value</string>
    <string name="makeItMine">Make it mine</string>
    <string name="makeItMineDesc">Customize app colors and apperance</string>

    <string-array name="fivePx_Cat">
        <item>All</item>
        <item>Abstract</item>
        <item>Animals</item>
        <item>Black and White</item>
        <item>Celebrities</item>
        <item>City and Architecture</item>
        <item>Family</item>
        <item>Fine Art</item>
        <item>Landscapes</item>
        <item>Macro</item>
        <item>Nature</item>
    </string-array>

    <string-array name="change_unit">
        <item>Minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>

</resources>
