<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/expandedImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:scaleType="centerCrop"
        android:contentDescription="@string/lastWallpaperCustomize"
        android:transitionName="@string/expandedImageView"
        android:background="@color/expanded_image_bg"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/bottomSheetLayout"
        android:padding="@dimen/cardView_margin"
        android:layout_gravity="bottom"
        android:background="@color/elevated_info">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/smallPadding"
            android:id="@+id/customizeSectionTitle"
            android:clickable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            tools:text="Customize Image"
            android:text="@string/customize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Blur"
            android:id="@+id/blurringTitle"
            android:text="@string/Blur"
            android:padding="@dimen/smallPadding"
            android:textColor="@android:color/white"/>

        <SeekBar
            android:id="@+id/blurringValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/cardView_margin"
            android:max="25"
            android:contentDescription="@string/changeBlurring"
            android:layout_marginEnd="@dimen/cardView_margin"
            android:padding="@dimen/smallPadding"
            android:progressTint="@android:color/white"
            android:thumbTint="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Dim"
            android:id="@+id/dimTitle"
            android:text="@string/Dim"
            android:padding="@dimen/smallPadding"
            android:textColor="@android:color/white"/>

        <SeekBar
            android:id="@+id/dimValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/cardView_margin"
            android:layout_marginEnd="@dimen/cardView_margin"
            android:padding="@dimen/smallPadding"
            android:contentDescription="@string/changeDimValue"
            android:max="30"
            android:progressTint="@android:color/white"
            android:thumbTint="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Greyscale"
            android:text="@string/Greyscale"
            android:id="@+id/greyTitle"
            android:padding="@dimen/smallPadding"
            android:textColor="@android:color/white"/>

        <SeekBar
            android:id="@+id/greyValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/cardView_margin"
            android:layout_marginEnd="@dimen/cardView_margin"
            android:padding="@dimen/smallPadding"
            android:contentDescription="@string/changeGreyValue"
            android:progressTint="@android:color/white"
            android:thumbTint="@android:color/white"/>

    </LinearLayout>

</FrameLayout>