<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinateLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/widgetOptionsGroup"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nextWallpaper"
                android:checked="true"
                android:text="@string/NextWallpaper"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nextAlbum"
                android:text="@string/nextAlbum"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchToAlbum"
                android:text="@string/switchToAlbum"/>

            <Spinner
                android:layout_margin="@dimen/cardView_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/albumSpinner"/>

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:layout_gravity="center_horizontal"
            android:id="@+id/save"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>