<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/lastWallpaperContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/doubleCardHeight"
        android:visibility="gone"
        android:layout_margin="@dimen/cardView_margin"
        android:elevation="@dimen/default_elevation">

        <ImageView
            android:id="@+id/lastSetImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/lastWallpaper"
            android:scaleType="centerCrop" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/doubleCardHeight"
        android:layout_margin="@dimen/cardView_margin"
        android:elevation="@dimen/default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/changeEveryCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/changeEvery"
                android:textColor="@color/text_secondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/changeEveryField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:inputType="number"
                    android:text="@string/defaultChangeValue"
                    android:textColor="@color/text_secondary"
                    tools:text="30" />


                <Spinner
                    android:id="@+id/changeEveryUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/cardView_margin" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/smallCardHeight"
        android:layout_margin="@dimen/cardView_margin"
        android:elevation="@dimen/default_elevation">

        <CheckBox
            android:id="@+id/changeWithUnlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/changeWithUnlock"
            android:textColor="@color/text_secondary" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/smallCardHeight"
        android:layout_margin="@dimen/cardView_margin"
        android:elevation="@dimen/default_elevation">

        <CheckBox
            android:id="@+id/changeWithDoubleTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/changeWithDoubleTap"
            android:textColor="@color/text_secondary" />


    </android.support.v7.widget.CardView>


</LinearLayout>